Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101013

QQuickFileDialog does not work on Android

XMLWordPrintable

    • Android
    • 2e4f62332b (qt/qtbase/6.3) 2e4f62332b (qt/tqtc-qtbase/6.3) 2e4f62332b (qt/tqtc-qtbase/6.3.0)
    • 2022wk10FOAndroid&Automotive

      The FileDialog opens on Android, but when you select a file and accept, the resulting fileDialog.currentFile is empty.

      Eg: this snippet:

      FileDialog { 
      id: fileDialog 
      title: "Please choose a file"  
      onAccepted: {
      console.log(fileDialog.currentFile) 
      } 
      }

      Comes out as

      D qml : : 

      Needs to be confirmed but seems the bug was introduced with this patch:

      https://codereview.qt-project.org/c/qt/qtdeclarative/+/381801

       

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            samuelmira Samuel Mira
            samuelmira Samuel Mira
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes